--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,7 +27,7 @@
         Optional placeholders replaced at runtime:
           {device} - Device name
     -->
-    <string name="updater_server_url" translatable="false">http://cat.s1.natapp.cc/update/{device}.json</string>
+    <string name="updater_server_url" translatable="false">http://cat.s1.natapp.cc/update/wayne.json</string>
 
     <string name="verification_failed_notification">Verification failed</string>
     <string name="verifying_download_notification">Verifying update</string>
